[gd_scene load_steps=10 format=3 uid="uid://bpgex31naxj1w"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_bp1fp"]
[ext_resource type="Script" path="res://web_pick_image_file.gd" id="2_v3sgg"]
[ext_resource type="PackedScene" uid="uid://xklntftxk1rp" path="res://level.tscn" id="2_w46sc"]
[ext_resource type="PackedScene" uid="uid://64bqxwu4em4s" path="res://image_confirmation.tscn" id="3_iojqf"]
[ext_resource type="Texture2D" uid="uid://c8cs6o7sepp6n" path="res://ui/UploadButton.png" id="3_lvanf"]
[ext_resource type="Texture2D" uid="uid://buci8qjklfa1k" path="res://ui/LoadLevelButton.png" id="4_islxa"]
[ext_resource type="Texture2D" uid="uid://bsi82n0dq31aj" path="res://ui/BackButton.png" id="4_lf6m8"]
[ext_resource type="PackedScene" uid="uid://cbbx0v3mpscgm" path="res://pick_image_file.tscn" id="5_lnlgg"]
[ext_resource type="PackedScene" uid="uid://bvxbdyktcqgqx" path="res://pick_boardwalk_file_dialog.tscn" id="9_tljks"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp1fp")
level_scene = ExtResource("2_w46sc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="MultiplayerNameField" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
placeholder_text = "Multiplayer Name..."
max_length = 32

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="UploadImageButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_lvanf")

[node name="LoadLevelButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_islxa")

[node name="BackButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_lf6m8")

[node name="WebPickImageFile" type="Node" parent="."]
script = ExtResource("2_v3sgg")

[node name="WebPickBoardwalkFile" type="Node" parent="."]
script = ExtResource("2_v3sgg")
accept = ["*.boardwalk"]

[node name="ImageConfirmation" parent="." instance=ExtResource("3_iojqf")]

[node name="PickImageFileDialog" parent="." instance=ExtResource("5_lnlgg")]

[node name="PickBoardwalkFileDialog" parent="." instance=ExtResource("9_tljks")]

[connection signal="text_changed" from="VBoxContainer/MultiplayerNameField" to="." method="_on_multiplayer_name_field_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/UploadImageButton" to="." method="_on_upload_image_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadLevelButton" to="." method="_on_load_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="file_loaded" from="WebPickImageFile" to="." method="_on_web_pick_image_file_file_loaded"]
[connection signal="file_loaded" from="WebPickBoardwalkFile" to="." method="_on_web_pick_boardwalk_file_file_loaded"]
[connection signal="confirmed" from="ImageConfirmation" to="." method="_on_image_confirmation_confirmed"]
[connection signal="file_selected" from="PickImageFileDialog" to="." method="_on_pick_image_file_dialog_file_selected"]
[connection signal="file_selected" from="PickBoardwalkFileDialog" to="." method="_on_pick_boardwalk_file_dialog_file_selected"]
